# property-management-automation

./: .env.example  .gitignore  .mcp.json  AUTOMATION_SYSTEM_REVIEW.md  CHANGELOG.md  CLAUDE.md  COMPLETE_TEST_SCENARIOS_A_TO_Z.md  COMPREHENSIVE_BUSINESS_LOGIC_ANALYSIS.md  CRITICAL_ISSUES_CHECKLIST.md  CSV_COMPLETE_TESTING_REPORT.md  CSV_FIELD_CLONING_ANALYSIS.md  CSV_ORIGINAL_PROCESSOR_TEST_REPORT.md  DEEP_INVESTIGATION_FINDINGS.md  DUPLICATE_DETECTION_BUG_ANALYSIS.md  Evolve_Duplication_Analysis_Report.md  GMAIL_OAUTH_IMPROVEMENTS.md  HCP_Service_Line_User_Modifications_Analysis.md  HCP_Sync_Issues_Report.md  ITRIP_NEXT_GUEST_SOLUTION.md  MIGRATION_GUIDE.md  README.md  SECURITY_CLEANUP_SUMMARY.md  SYSTEM_IMPROVEMENTS_ACCURATE.md  SYSTEM_IMPROVEMENTS_FINAL.md  SYSTEM_IMPROVEMENTS_RECOMMENDATIONS.md  TASK_TRACKER.md  VERONICA_OPERATIONS_GUIDE.md  VERONICA_OPERATIONS_GUIDE_ACCURATE.md  VERONICA_OPERATIONS_GUIDE_FINAL.md  airtable-mcp-wrapper.sh  airtable_duplicate_analysis.json  airtable_field_comparison.md  analyze-duplicate-detection.py  analyze_duplicates.cjs  analyze_original_37717_issue.py  automation_controller.py  backup.sh  batch-reconcile-prod.py  batch_restore_records.py  check_dates_in_feed.py  (+89 more)
.git-rewrite/: backup-refs  commit  heads  index  message  parse  revs
.git-rewrite/t/: .gitignore  .mcp.json  cron_remove.sh  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: LIVE_DATA_INTEGRATION_COMPLETE.md  README.md  WIREFRAMES.md  app.json  test-live-data-integration.js
app/.tamagui/: tamagui.config.cjs
app/components/: PaginatedReservationsList.tsx
app/services/: allRealDevData.js  mcpDataService.js  realDataService.js
config/: Context.md
docs/: AIRSCRIPTS_MIGRATION_PLAN.md  COMPREHENSIVE_TESTING_CHECKLIST.md  CSV_PROCESSING_COMPLETE_GUIDE.md  Context.md  HOUSECALLPRO_MCP_PLAN.md  ICS_PROCESSING_COMPLETE_GUIDE.md  INSTALLATION.md  TECHNICAL_SETUP_AND_ARCHITECTURE_GUIDE_7-11-25.md  housecallpromcp.md  reporting-analytics-code-snippets.md  service-line-webhook-api-key.md  service-line-webhook-setup.md  supabase-client-example.js  sync-field-business-rules.md
docs/api/: AIRSCRIPTS_API.md  supabase-webhook.md
docs/architecture/: DATA_FLOW.md
docs/audit/: Deletables.md  SYSTEM_LOGICAL_FLOW.md
docs/guides/: CHANGELOG.md  INSTALLATION.md  OPERATIONS_GUIDE.md
docs/operations/: AIRTABLE_FIELDS_GUIDE_FOR_VERONICA.md  AIRTABLE_VIEW_SCENARIOS.md  EMAIL_TO_VERONICA_HOMEWORK.md  SCENARIOS_QUICK_REFERENCE.md
docs_v2/: 02-ics-feed-sync.md  CLAUDE.md  DOCUMENTATION_TODO_TRACKER.md  FEATURE_MAP.md  itrip-next-guest-date-update.md  logging-architecture.md  owner-arrival-logic.md  service-line-auto-update.md
docs_v2/00-system-overview/: BusinessLogicAtoZ.md  README.md  SYSTEM_LOGICAL_FLOW.md  mermaid-flows.md  version-history.md
docs_v2/01-csv-processing/: BusinessLogicAtoZ.md  README.md  SYSTEM_LOGICAL_FLOW.md  mermaid-flows.md  version-history.md
docs_v2/02-ics-feed-sync/: BusinessLogicAtoZ.md  README.md  SYSTEM_LOGICAL_FLOW.md  mermaid-flows.md  version-history.md
docs_v2/03-evolve-scraping/: BusinessLogicAtoZ.md  README.md  SYSTEM_LOGICAL_FLOW.md  mermaid-flows.md  version-history.md
docs_v2/04-housecallpro-integration/: BusinessLogicAtoZ.md  README.md  SYSTEM_LOGICAL_FLOW.md  mermaid-flows.md  version-history.md
docs_v2/05-airtable-integration/: BusinessLogicAtoZ.md  README.md  SYSTEM_LOGICAL_FLOW.md  mermaid-flows.md  version-history.md
docs_v2/06-mcp-servers/: README.md  SYSTEM_LOGICAL_FLOW.md
docs_v2/07-api-server/: BusinessLogicAtoZ.md  README.md  SYSTEM_LOGICAL_FLOW.md  mermaid-flows.md  version-history.md
docs_v2/08-schedule-management/: BusinessLogicAtoZ.md  README.md  SYSTEM_LOGICAL_FLOW.md  mermaid-flows.md  version-history.md
docs_v2/09-duplicate-detection/: BusinessLogicAtoZ.md  README.md  SYSTEM_LOGICAL_FLOW.md  mermaid-flows.md  version-history.md
docs_v2/10-service-line-management/: BusinessLogicAtoZ.md  README.md  SYSTEM_LOGICAL_FLOW.md  mermaid-flows.md  version-history.md
docs_v2/11-customer-property-management/: BusinessLogicAtoZ.md  README.md  SYSTEM_LOGICAL_FLOW.md  mermaid-flows.md  version-history.md
docs_v2/12-webhook-processing/: BusinessLogicAtoZ.md  README.md  SYSTEM_LOGICAL_FLOW.md  mermaid-flows.md  version-history.md
docs_v2/13-automation-controller/: BusinessLogicAtoZ.md  (+4 more)
hcp-prod-review/: collect-all-data.py  download-all-pages.sh  download-hcp-data.js  download-hcp-prod-data.py
hcp-sync/: hcp_sync.js
src/: run_anywhere.py  run_automation_dev.py  run_automation_prod.py
testing/: test-service-type-extraction.js  test-service-type-preservation.py  test-supabase-image.sh
tests/: Context.md  boris-dev-comprehensive-tests.py  comprehensive-e2e-test.py  critical-business-logic-tests.py  dev-comprehensive-tests.cjs
tools/: Context.md  README-HCP-MCP.md  hcp_mcp_client.py  start-airtable-mcp.sh  start-trello-mcp.sh  test-airtable-mcp.js  test-analysis.cjs  test-trello-mcp.cjs
(+819 files in other folders)
